--- a/getfedora.org/data/content/verify.html
+++ b/getfedora.org/data/content/verify.html
@@ -55,6 +55,12 @@
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_server_id']}-${global_variables.release['RC_server_gold']}-x86_64-CHECKSUM">${_('For 64-bit images')}</a>
             </div>
+            <div class="h-body text-center">
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-${global_variables.release['curr_server_id']}-${global_variables.release['RC_server_gold']}-aarch64-CHECKSUM">${_('For aarch64 images')}</a>
+            </div>
+            <div class="h-body text-center">
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Server-disk-${global_variables.release['curr_server_id']}-${global_variables.release['RC_server_gold']}-aarch64-CHECKSUM">${_('For aarch64 raw')}</a>
+            </div>
         </div>
         <div class="col-sm-4 col-xs-12 highlight productitem cloud">
             <div class="productitem-logo">
