Initial commit for Flock 2018

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -11,16 +11,14 @@
   <body class="home" data-spy="scroll" data-target="#flocknav">
     <xi:include href="../templates/head.html" />
     <div id="welcome" class="non-jumbo text-center">
-      <div id="welcome2" class="non-jumbo">
   	  <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-8 col-md-offset-2">
             <br/>
             <p>
-              <img src="${path}/static/images/capecod-logo.png" />
+            <img src="${path}/static/images/flock-dresden-816x345.jpg" />
             </p>
           </div>
-        </div>
   	  </div>
       </div>
     </div>
@@ -29,6 +27,7 @@
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
+<!--
           <h2>Schedule</h2>
           <p>
             <strong>The <a href="https://flock2017.sched.org">Flock 2017 schedule</a> is now available!</strong>
@@ -36,12 +35,12 @@
           <p>
             Flock 2017 is a more <strong>action-oriented event</strong> than previous years. This affects the types of session proposals that were accepted. The scheduled slots favor collaborative team working sessions and workshops over team status reports.
           </p>
-          <h3>Event Dates</h3>
-          <p>Flock will begin the morning of Tuesday, August 29. Sessions will continue each day until midday on Friday, September 1. You should plan to arrive on Monday, August 28 and to depart no sooner than Friday afternoon for the best experience.</p>
+-->
+          <h2>Event Dates</h2>
+          <p>Flock will begin the morning of Wednesday, August 8. Sessions will continue each day until Saturday, August 11. You should plan to arrive on Tuesday, August 7 and to depart no sooner than Saturday afternoon for the best experience.</p>
+                     
           <table class="calendar">
               <tr>
-                <th>Sat</th>
-                <th>Sun</th>
                 <th>Mon</th>
                 <th>Tue</th>
                 <th>Wed</th>
@@ -53,26 +52,25 @@
               <tr class="flock">
                 <td></td>
                 <td></td>
-                <td></td>
                 <td class="flock" colspan="4">Flock</td>
-                <td></td>
                 <td></td>
               </tr>
               <tr>
-                <td>Aug <span>26</span></td>
-                <td>Aug <span>27</span></td>
-                <td>Aug <span>28</span></td>
-                <td class="flock">Aug <span>29</span></td>
-                <td class="flock">Aug <span>30</span></td>
-                <td class="flock">Aug <span>31</span></td>
-                <td class="flock">Sep <span>01</span></td>
-                <td>Sep <span>02</span></td>
-                <td>Sep <span>03</span></td>
+                <td>Aug <span>6</span></td>
+                <td>Aug <span>7</span></td>
+                <td class="flock">Aug <span>8</span></td>
+                <td class="flock">Aug <span>9</span></td>
+                <td class="flock">Aug <span>10</span></td>
+                <td class="flock">Aug <span>11</span></td>
+                <td>Aug <span>12</span></td>
               </tr>
             </table>
           <h2>Registration Information</h2>
-          <p><mark>Registration for Flock is now closed.</mark></p>
-          <p>Attendees who registered and paid the registration fee by July 24, 2017 are included in the count for items that have to be confirmed in advance.  This includes lunch and the t-shirt.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
+          <p><mark>Registration for Flock is open.</mark></p>
+          <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now.</p>
+          <p>Flock 2018 will, again, feature a small optional registration fee to help offset the costs of swag and lunch.  This fee is scaled by country using the <a href="http://www.economist.com/content/big-mac-index">Big Mac Index</a> and is based on a $25 Fee in the United States.</p>
+          <p>If you need travel funding for Flock, we will be releasing a funding application process soon.  Keep an eye on this space and the mailing list for more information.  You can (and should) wait to register until you have applied for funding.</p>
+          <p>Attendees who registered and paid the registration fee by July 2, 2017 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
           <p>If you did not register, you are still welcome to attend the conference and events. However, you will not receive benefits such as lunch and a shirt.</p>
         </div>
       </div>
@@ -87,21 +85,22 @@
             <div class="col-xs-12 col-sm-6">
               <h3>Mailing List</h3>
               <p>
-                The <a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2017@lists.fedoraproject.org/">Flock attendees 2017 mailing list</a> is the primary means of communication for attendees of Flock. If you register for Flock, you will be subscribed to this list.
+                The <a href="https://lists.fedoraproject.org/archives/list/flock-attendees@lists.fedoraproject.org/">Flock attendees mailing list</a> is the primary means of communication for attendees of Flock. You should subscribe to this list if you plan to attend.
               </p>
               <ul>
-                <li><a href="https://lists.fedoraproject.org/accounts/signup/?next=/admin/lists/flock-attendees-2017.lists.fedoraproject.org/">Subscribe now.</a></li>
-                <li><a href="https://lists.fedoraproject.org/archives/list/flock-attendees-2017@lists.fedoraproject.org/">Read list postings now.</a></li>
+                <li><a href="https://lists.fedoraproject.org/accounts/signup/?next=/admin/lists/flock-attendees.lists.fedoraproject.org/">Subscribe now.</a></li>
+                <li><a href="https://lists.fedoraproject.org/archives/list/flock-attendees@lists.fedoraproject.org/">Read the list archives.</a></li>
               </ul>
             </div>
             <div class="col-xs-12 col-sm-6">
               <h3>IRC</h3>
               <p>
-                Our main IRC channel for the event is <a href="https://webchat.freenode.net/?channels=#fedora-flock">#fedora-flock</a> on <strong>irc.freenode.net</strong>. Each session room also has a dedicated channel in IRC, and some sessions will be transcribed there.
+                Our main IRC channel for the event is <a href="https://webchat.freenode.net/?channels=#fedora-flock">#fedora-flock</a> on <strong>irc.freenode.net</strong>.
+<!-- Each session room also has a dedicated channel in IRC, and some sessions will be transcribed there. -->
               </p>
               <ul>
                 <li><a href="https://webchat.freenode.net/?channels=#fedora-flock">Join #fedora-flock now.</a></li>
-                <!-- fixme <li><a href="#">View full list of Flock channels.</a></li> -->
+<!-- fixme <li><a href="#">View full list of Flock channels.</a></li> -->
               </ul>
           </div>
           <div class="row">
@@ -117,11 +116,12 @@
     </div>
     </div>
 
+<!--
     <div id="transport" class="non-jumbo blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <!--<div class="large-icon"><i class="fa fa-bus"></i></div>-->
+          <div class="large-icon"><i class="fa fa-bus"></i></div>
           <h2>Transportation</h2>
           <div class="col-xs-12 col-sm-7">
             <a href="http://www.openstreetmap.org/search?query=35%20Scudder%20Avenue%2C%20Hyannis%2C%20Massachusetts#map=17/41.64539/-70.29640"><img src="/static/images/map-capecod.png" style="max-width: 100%;"/></a>
@@ -148,6 +148,7 @@
       </div>
     </div>
     </div>
+-->
 
     <div id="venue" class="non-jumbo text-center">
       <div class="container">
@@ -155,32 +156,33 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Venue and Hotel</h2>
           <div class="col-xs-12 col-md-7">
-          <p><a href="http://www.capecodresortandconferencecenter.com/">The Resort and Conference Center at Hyannis</a> is both the conference venue as well as the conference hotel.</p>
+          <p><a href="https://www.radissonblu.com/en/parkhotel-dresdenradebeul">The Radisson Blu Park Hotel &amp; Conference Centre, Dresden Radebeul, Germany</a> is both the conference venue as well as the conference hotel.</p>
 	  <ul style="padding-left: 1em;">
-            <li>A <strong>$139/night</strong>* rate per double, queen, or king room is available. You will need to use the "Group Attendee" code "FLOCK" on the <a href="https://reservations.travelclick.com/15240?hotelId=15240#/guestsandrooms">hotel reservation form</a> to book your room at the Flock rate.</li>
-	    <li>A <strong>$169/night</strong>* double occupancy (under 18 free) discounted rate is available the weekend before and the weekend after.</li>
-	    <li>If you are booking by phone, please state that you are attending the Flock 2017 Conference.</li>
-	    <li>The Cape Cod Resort and Conference Center will charge your credit card immediately for one night as a deposit which will be applied to the last night of your stay. The remainder of the charges will be paid at checkout.</li>
-        <li><strong><strike>July 26</strike>August 4 - Extended</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then!</li>
+          <li>Flock Conference room rates of <strong>100 EUR/night</strong> per double occupancy room and <strong>75 EUR/night</strong> per single occupancy room have been arranged.</li>
+          <li>To obtain the Flock rate, please email <a href="mailto:events@parkhotel-radebeul.com">events@parkhotel-radebeul.com</a> with your name, contact details, date of arrival and departure and mention the "Flock Fedora Conference."  You will receive a confirmation and reservation number back by email.</li>
+<!--
+    <li><strong><strike>July 26</strike>August 4 - Extended</strong> is the cut-off for our reserved block. If reserving for yourself, please book before then!</li>
+-->
 	  </ul>
 	  <p><strong>Please Note:</strong> If you receive financial assistance to attend Flock, the organizers will book your travel arrangements (flight, hotel, bus) for you.</p>
-          <img src="/static/images/capecod_hotel_thumbs.png" style="width: 100%;" />
-	  <p><em>* 11.7% lodging tax applies.</em></p>
-          </div>
-          <div class="col-xs-12 col-md-5">
-          <img src="/static/images/capecod_hotel.png" style="width: 100%;" />
-          <address>
-            <h4><a href="http://www.capecodresortandconferencecenter.com/">The Resort and Conference Center at Hyannis</a></h4>
-            35 Scudder Avenue, Hyannis, Massachusetts USA 02601<br/>
-            +1 (866) 828-8259<br/>
-            <a href="mailto:info@capecodresortandconference.com">info@capecodresortandconference.com</a>
-          </address>
-          </div>
         </div>
+           <div class="col-xs-12 col-md-5">
+           <address>
+             <h4><a href="https://www.radissonblu.com/en/parkhotel-dresdenradebeul">The Radisson Blu Park Hotel &amp; Conference Centre, Dresden Radebeul, Germany</a></h4>
+             Nizzastrasse 55<br/>
+             Radebeul D-01445 Dresden Germany <br/>
+             +49 351 8321-035<br/>
+             <a href="mailto:events@parkhotel-radebeul.com">events@parkhotel-radebeul.com</a>
+           </address>
+           <p>Radebuel is a suburb of Dresden featuring easy direct access to the city center via tram and bus.</p>
+           </div>
+
       </div>
     </div>
     </div>
+    </div>
 
+<!--
     <div id="events" class="non-jumbo light-blue text-center">
       <div class="container">
       <div class="row">
@@ -193,6 +195,7 @@
       </div>
     </div>
     </div>
+-->
 
     <div id="sponsors" class="non-jumbo text-center">
       <div class="container">
@@ -209,6 +212,7 @@
             <a href="https://www.redhat.com"><img src="../../static/images/sponsors/redhat.png"/></a>
           </p>
           <br/>
+<!--
           <h3>Gold Level</h3>
           <p>
             <a href="https://www.opensuse.org/"><img src="../../static/images/opensuse.png"/></a>
@@ -224,6 +228,7 @@
           <p>
             <a href="https://www.lulzbot.com/"><img src="../../static/images/lulzbot-logo.png"/></a>
           </p>
+-->
         </div>
       </div>
       </div>
