Add CfP and some fixes to flocktofedora.org

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -23,6 +23,27 @@
       </div>
     </div>
 
+    <div id="about" class="non-jumbo text-center">
+      <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <h2>What is Flock?</h2>
+          <p>Flock is the Fedora Project's annual contributor-focused conference. It alternates between European and North American locations. The conference provides a venue for face to face meetings and conversations.  It is also a place to celebrate our community.</p>
+
+          <h2>What will we do at Flock?</h2>
+          <ul>
+              <li align="left"><b>Communicate the Fedora Strategy.</b> Everyone in Fedora should understand and feel well-aligned with the project's goals, both long-term and tactical. We should all understand the messaging we're using to attract new users and contributors.m</li>
+              <li align="left"><b>Plan the Next Strategy.</b> This strategy doesn't come from the top down, or from thin air, and it's not dictated by our sponsors. It comes from the community. Because we're so big and distributed, Flock can't be the only place where we get new ideas, but it is a summit where we present, learn about, and discuss them.</li>
+              <li align="left"><b>Build Community Connections and Engagement.</b> We do amazing work as a global project, but there's no substitute for direct human interaction. Flock helps tie us together. In-person discussion, collaboration, and fun social events help us function better on IRC and mailing lists throughout the year.</li>
+          </ul>
+
+          <h2>Who comes to Flock?</h2>
+          <p>While Flock is open to anyone, the majority of talks at Flock are focused on existing contributors and those looking to increase their involvement.  There is almost no solely user-focused content.</p>
+        </div>
+  	  </div>
+      </div>
+    </div>
+
     <div id="schedule" class="non-jumbo text-center">
       <div class="container">
       <div class="row">
@@ -65,6 +86,53 @@
                 <td>Aug <span>12</span></td>
               </tr>
             </table>
+
+            <h2>Tentative Schedule</h2>
+            <ul>
+                <li align="left"><p><b>Day 1, morning:</b> Kickoff. We'll start with a joint session about the state of Fedora in 2018, priorities for the next year, and messaging the Fedora Council would like emphasized. Then, we will have a series of 20-minute presentations from each of the Fedora Editions, as well as from the current Fedora Objectives — IoT, CI, and Modularity.</p></li>
+                <li align="left"><p><b>Day 1, afternoon:</b> New Ideas Talks. These sessions will be preselected presentations. Additionally, presenters should tell us who they need to be in the room to discuss / convince / get involved.</p></li>
+                <li align="left"><p><b>Day 2, morning:</b> We'll start with a keynote of general interest to the Fedora community, and then continue with break-out talks.</p></li>
+                <li align="left"><p><b>Day 2, afternoon:</b> Subproject and SIG round tables.  We’ll have round tables filling the room so that teams can break out and discuss but also easily find other teams. Those who do work in more than one subproject can float from table to table ensuring that we keep talking to ourselves and planning well.</p></li>
+                <li align="left"><p><b>Day 3, all day:</b> Hackfests and Topic-Focused Discussion. SIG and Team meetings.  There may also be more break-out talks.</p></li>
+                <li align="left"><p><b>Day 4, morning:</b> Hackfests continue.</p></li>
+                <li align="left"><p><b>Day 4, afternoon:</b> Wrap Up / Readout session. Leadership panel followed by five-minute summaries from the various breakouts.</p></li>
+            </ul>
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <div id="cfp" class="non-jumbo text-center">
+      <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+            <h2>Call for Proposals</h2>
+            <p>We invite you to submit proposals for talks (60 minutes) or workshops( 2 hours),  or hackfests/FADs (half or full day) on topics of importance to the contributor community.</p>
+            <p>Topic ideas include:</p>
+            <ul>
+                <li align="left">Pitch an idea!  Have the next Fedora Rings, or Fedora Editions plan, or rpm-ostree, or something entirely new? Have something that bugs you and a plan to fix it? Think we should grow our userbase in a particular area by doing something we aren't? Pitch it!</li>
+                <li align="left">Team planning for the next year. Mini-strategic-hackfests for various groups; for example, regional planning.</li>
+                <li align="left">Focused hackfest for a team or topic.</li>
+                <li align="left">Training for existing contributors on new processes (i.e. packaging updates or Zanata updates).</li>
+                <li align="left">Onboarding/Join meetings for contributors</li>
+                <li align="left">Your idea here!</li>
+            </ul>
+            <p>We are accepting proposals as issues in the <a href="https://pagure.io/flock/issues">Flock repository on Pagure</a>.  We are doing this so that you can solicit feedback on your proposal, look for collaborators, and figure out who you need in the room and who will be there.  Specific instructions are in the Pagure repo.</p>
+            <p>Proposals are evaluated in three rounds and must be submitted by the beginning of the final round.  This allows us to confirm talks for speakers sooner than making everyone wait until then end.  This also incentivizes you to submit early :D.  Unselected proposals carry forward to the next round.</p>
+            <ol>
+                <li align="left"><p>Round 1 selection starts on: 15 June 2018</p></li>
+                <li align="left"><p>Round 2 selection starts on: 2 July 2018</p></li>
+                <li align="left"><p>Final selection starts on: 15 July 2018 (absolute last day for CFP submission)</p></li>
+            </ol>
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <div id="register" class="non-jumbo text-center">
+      <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Registration Information</h2>
           <p><mark>Registration for Flock is open.</mark></p>
           <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now.</p>
