Update doc line for s390x to mention s390x
"Power Architecture" refers to the above PPC, not s390x.

Change to say "IBM z Systems".

--- a/alt.fedoraproject.org/data/content/alt/index.html
+++ b/alt.fedoraproject.org/data/content/alt/index.html
@@ -1135,7 +1135,7 @@
         <div class="col-md-4 col-xs-12">
         <div class="col-xs-12 text-center">
           <h3><i class="fa fa-fw fa-lg header-icon fa-book"></i>${_('Documentation')}</h3>
-          <p>${Markup(_('A wiki page with information about Power Architecture on Fedora is available on the &lt;a href="%s"&gt;Fedora Project Wiki&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Architectures/s390x'))}</p>
+          <p>${Markup(_('A wiki page with information about IBM z Systems on Fedora is available on the &lt;a href="%s"&gt;Fedora Project Wiki&lt;/a&gt;.') % ('https://fedoraproject.org/wiki/Architectures/s390x'))}</p>
         </div>
         </div>
         <div class="col-md-4 col-xs-12">
