--- a/getfedora.org/data/content/verify.html
+++ b/getfedora.org/data/content/verify.html
@@ -68,13 +68,25 @@
             </div>
             <h4 class="uppercase">${_('Atomic')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/x86_64/iso/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM">${_('For Atomic Host Iso')}</a>
+              <div class="btn btn-default btn-topmargin btn-verify btn-checksum">
+                ${_('For Atomic Host ISOs')}
+                <div>
+                <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/x86_64/iso/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM" style="display:inline;">${_('x86_64')}</a> | 
+                <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/aarch64/iso/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-aarch64-CHECKSUM" style="display:inline;">${_('aarch64')}</a> | 
+                <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/ppc64le/iso/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-ppc64le-CHECKSUM" style="display:inline;">${_('ppc64le')}</a> 
+                </div>
+              </div>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/x86_64/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM">${_('For Atomic Host images')}</a>
-            </div>
-            <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Container-${global_variables.release['curr_id']}-${global_variables.release['RC_gold']}-x86_64-CHECKSUM">${_('For Container')}</a>
+              <div class="btn btn-default btn-topmargin btn-verify btn-checksum" >
+                ${_('For Atomic Host images')}
+                
+                <div>
+                  <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/x86_64/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM" style="display:inline;">${_('x86_64')}</a> | 
+                  <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/aarch64/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-aarch64-CHECKSUM" style="display:inline;">${_('aarch64')}</a> | 
+                   <a href="${global_variables.path['download_atomic']}/stable/Fedora-Atomic-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}/AtomicHost/ppc64le/images/Fedora-AtomicHost-${global_variables.release['curr_atomic_id']}-${global_variables.release['atomic_composedate']}-ppc64le-CHECKSUM" style="display:inline;">${_('ppc64le')}</a> 
+                </div>
+              </div>
             </div>
         </div>
     </div>
