Adding Flock Visa Letter Form

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -137,7 +137,7 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <h2>Registration Information</h2>
           <p><mark>Registration for Flock is open.</mark></p>
-          <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now.</p>
+          <p>This year we are handling registration via EventBrite.  You can find the <a href="https://www.eventbrite.com/e/flock-to-fedora-2018-tickets-46180853175?aff=es2">Flock 2018 event</a> online now. If you need a visa letter to attend Flock, please complete the <a href="https://docs.google.com/forms/d/13ndmY6f69nUh42lJTqcLMhPNmM8vrqlwGhqF0dc-Vxg/edit">Visa Letter Request Form</a>.</p>
           <p>Flock 2018 will, again, feature a small optional registration fee to help offset the costs of swag and lunch.  This fee is scaled by country using the <a href="http://www.economist.com/content/big-mac-index">Big Mac Index</a> and is based on a $25 Fee in the United States.</p>
           <p>If you need travel funding for Flock, we will be releasing a funding application process soon.  Keep an eye on this space and the mailing list for more information.  You can (and should) wait to register until you have applied for funding.</p>
           <p>Attendees who registered and paid the registration fee by July 2, 2017 are included in the count for items that have to be confirmed in advance.  This includes lunch, swag, etc.  If you registered and/or paid after this date, you may not receive all of the benefits of registration.</p>
