flock: link to wiki for transport options

--- a/flocktofedora.org/data/content/index.html
+++ b/flocktofedora.org/data/content/index.html
@@ -186,39 +186,22 @@
     </div>
     </div>
 
-<!--
     <div id="transport" class="non-jumbo blue text-center">
       <div class="container">
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="large-icon"><i class="fa fa-bus"></i></div>
           <h2>Transportation</h2>
-          <div class="col-xs-12 col-sm-7">
-            <a href="http://www.openstreetmap.org/search?query=35%20Scudder%20Avenue%2C%20Hyannis%2C%20Massachusetts#map=17/41.64539/-70.29640"><img src="/static/images/map-capecod.png" style="max-width: 100%;"/></a>
-            <p style="font-size: xx-small;">Map tiles by Stamen Design, under CC BY 3.0. Data by OpenStreetMap, under ODbL</p>
-          </div>
           <div class="col-xs-12 col-sm-5">
             <p>
-            <strong>Download our fancy travel guide to help you get to and from the conference venue. (<a href="${path}/static/images/travel-guide-A4.pdf">A4</a>&nbsp;<a href="${path}/static/images/travel-guide-USletter.pdf">US Letter</a>)</strong>
-            </p>
-            <p>
-            There are many transportation options to get to, from, and around Hyannis and Cape Cod.
-            </p>
-            <p>
-            The closest international airport is <strong>Logan International Airport in Boston, MA.</strong>
-            </p>
-            <p>
-            The <strong>Plymouth &amp; Brockton bus line</strong> has a direct bus from Logan to the <strong>Hyannis Transportation Center</strong>; it is a 2-hour trip one-way.
-            </p>
-            <p>
-            Here is a <a href="https://fedoraproject.org/wiki/Flock2017-CapeCod-proposal#Travel_Summary">detailed overview of transportation options</a>.
+            Here is
+            a <a href="https://fedoraproject.org/wiki/GettingAroundInDresden">detailed overview of transportation options and some general information about Dresden</a>.
             </p>
           </div>
         </div>
       </div>
     </div>
     </div>
--->
 
     <div id="venue" class="non-jumbo text-center">
       <div class="container">
